# homelab-orchestrator

./: CLAUDE.md  Makefile  SPEC.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: alerts.py  dashboard.py  hosts.py  jobs.py  router.py  services.py  updates.py  websocket.py
backend/app/connectors/: __init__.py  apt.py  base.py  docker_ssh.py  docker_tcp.py  homeassistant.py  proxmox.py  registry.py  ssh.py
backend/app/core/: events.py  logging.py  security.py
backend/app/models/: __init__.py  alert.py  host.py  job.py  service.py  snapshot.py  update.py
backend/app/schemas/: __init__.py  alert.py  dashboard.py  host.py  job.py  service.py  update.py
backend/app/services/: __init__.py  alert_service.py  credential_service.py  monitor_service.py  notification.py  update_service.py
backend/app/tasks/: cleanup.py  health_check.py  metric_collector.py  scheduler.py  update_scan.py
deployment/: create-lxc.sh  homelab-orchestrator.service  install.sh  lxc-config.conf  nginx.conf
dev/: docker-compose.yml  seed.py
frontend/: package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/api/: alerts.ts  client.ts  dashboard.ts  hosts.ts  jobs.ts  services.ts  updates.ts
frontend/src/lib/stores/: alerts.svelte.ts  hosts.svelte.ts  services.svelte.ts  updates.svelte.ts  websocket.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/alerts/: +page.svelte
(+27 files in other folders)
